# Python-example-repo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
